# University-Finance-Application

backend/: .env  pyproject.toml
backend/app/cores/: config.py
backend/app/models/: __init__.py  base.py  college.py  financial.py  user.py
backend/app/schemas/: user.py
