[project]
name = "university-finance"
version = "0.1.0"
description = "Secure financial management system for educational institutions"
authors = [
    {name = "Beerappa Metre",email = "beerappametre05@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.104.1,<0.105.0)",
    "uvicorn[standard] (>=0.24.0,<0.25.0)",
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "alembic (>=1.12.1,<2.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "pydantic[email] (>=2.5.0,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.6,<0.0.7)",
    "redis (>=5.0.1,<6.0.0)",
    "celery (>=5.3.4,<6.0.0)",
    "websockets (>=12.0,<13.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "aiosmtplib (>=2.0.0,<3.0.0)",
    "loguru (>=0.7.2,<0.8.0)",
    "fastapi-pagination (>=0.12.9,<0.13.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
types-redis = "^4.6.0.20240106"
types-python-jose = "^3.3.4.20240106"

